# agentos

./: .gitignore  BETA_PLAN.md  LICENSE  README.md  README.zh-CN.md
.github/workflows/: build-android.yml  build-desktop.yml
agentos-bridge/: package-lock.json  package.json  tsconfig.json
agentos-bridge/src/: bridge.ts  cli.ts  device-identity.ts  index.ts
copaw-runtime/: ecosystem.config.cjs  server.py  start.sh
desktop/: package-lock.json  package.json  vite.config.ts
desktop/src/: App.css  App.tsx  index.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/resources/copaw/: requirements.txt  server.py
desktop/src-tauri/scripts/: mcp-bridge.mjs  package.json
desktop/src-tauri/src/: lib.rs  main.rs  process_manager.rs  skill_executor.rs  ws_client.rs
desktop/src/components/: AddMcpServerForm.tsx  ChatInput.tsx  CodeBlock.tsx  GenerateSkillForm.tsx  ImportSkillMdForm.tsx  LocalCopawSetup.tsx  LocalCopawStatus.tsx  LocalOpenclawSetup.tsx  LocalOpenclawStatus.tsx  MemoryPanel.tsx  MessageList.tsx  ProcessPanel.tsx  RegisterSkillForm.tsx  SettingsPanel.tsx  (+4 more)
docs/: mcp-and-skills-explained.md  protocol.md  skills-development.md  skills-guide.md
mobile/: app.json  package-lock.json  package.json  tsconfig.json
mobile/app/: _layout.tsx  login.tsx
mobile/plugins/: withCleartextTraffic.js
scripts/: tencent_ssh.py  tencent_upload.py  test_copaw_ws.js
scripts/download-page/: index.html
server/: .env.example  mcp-servers.json  package-lock.json  package.json  tsconfig.json
server/src/: index.ts
(+137 files in other folders)
