[package]
name = "agentos-desktop"
version = "0.1.0"
description = "AgentOS Desktop Client"
authors = ["AgentOS"]
edition = "2021"

[lib]
name = "agentos_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", features = ["json", "native-tls"] }
hostname = "0.4"
dirs-next = "2.0"
rand = "0.8"
regex = "1"
